--- a/src/main/resources/templates/produto/produto-list.html
+++ b/src/main/resources/templates/produto/produto-list.html
@@ -52,12 +52,13 @@
 							th:href="@{/editarProduto(id=${prod.id})}" role="button"> <span
 								class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 						</a>
-							<button th:href="@{/removerProduto(id=${prod.id})}" type="button"
+							<!-- button th:href="@{/removerProduto(id=${prod.id})}" type="button"
 								class="btn btn-danger btn-sm" data-toggle="modal"
 								data-target="#myModal">
 								<span class="oi oi-circle-x" title="Exclusão desabilitada"
 									aria-hidden="true"></span>
-							</button></td>
+							</button-->
+							</td>
 					</tr>
 				</table>
 				<br />
