--- a/src/main/resources/templates/produto/produtoValor-list.html
+++ b/src/main/resources/templates/produto/produtoValor-list.html
@@ -51,12 +51,13 @@
 									th:href="@{/editarProduto(id=${prod.id})}" role="button"> <span
 										class="oi oi-brush" title="Editar" aria-hidden="true"></span>
 								</a>
-									<button th:href="@{/removerProduto(id=${prod.id})}"
+									<!--button th:href="@{/removerProduto(id=${prod.id})}"
 										type="button" class="btn btn-danger btn-sm"
 										data-toggle="modal" data-target="#myModal">
 										<span class="oi oi-circle-x" title="Exclusão desabilitada"
 											aria-hidden="true"></span>
-									</button></td>
+									</button-->
+									</td>
 							</tr>
 						</tbody>
 					</table>
